--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,27 +9,27 @@
   </style>
 </head>
 <body>
+  <!-- ✅ Load Three.js first -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r148/three.min.js"></script>
+
+  <!-- ✅ Then load your game code -->
   <script>
-    // Scene, Camera, Renderer
+    // Now THREE is defined!
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
     const renderer = new THREE.WebGLRenderer();
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
 
-    // Lighting
     const light = new THREE.PointLight(0xffffff, 1, 100);
     light.position.set(10, 10, 10);
     scene.add(light);
 
-    // Ball
     const ballGeometry = new THREE.SphereGeometry(1, 32, 32);
     const ballMaterial = new THREE.MeshStandardMaterial({ color: 0x0077ff });
     const ball = new THREE.Mesh(ballGeometry, ballMaterial);
     scene.add(ball);
 
-    // Ground
     const planeGeometry = new THREE.PlaneGeometry(20, 20);
     const planeMaterial = new THREE.MeshStandardMaterial({ color: 0x888888 });
     const plane = new THREE.Mesh(planeGeometry, planeMaterial);
@@ -46,16 +45,13 @@
 
     function animate() {
       requestAnimationFrame(animate);
-      velocity -= 0.01; // gravity
+      velocity -= 0.01;
       y += velocity;
-
-      if (y <= 1) { // bounce
+      if (y <= 1) {
         y = 1;
         velocity *= -0.9;
       }
-
       ball.position.y = y;
-
       renderer.render(scene, camera);
     }
 
@@ -63,3 +59,4 @@
   </script>
 </body>
 </html>
+
