--- a/index.html
+++ b/index.html
@@ -9,54 +9,124 @@
   </style>
 </head>
 <body>
-  <!-- ✅ Load Three.js first -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r148/three.min.js"></script>
+  <script src="https://unpkg.com/three@0.148.0/build/three.min.js"></script>
+  <script src="https://unpkg.com/three@0.148.0/examples/js/controls/OrbitControls.js"></script>
 
-  <!-- ✅ Then load your game code -->
   <script>
-    // Now THREE is defined!
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
+    if (typeof THREE === 'undefined') {
+      alert('Three.js did not load!');
+    } else {
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera(
+        75,
+        window.innerWidth / window.innerHeight,
+        0.1,
+        1000
+      );
 
-    const light = new THREE.PointLight(0xffffff, 1, 100);
-    light.position.set(10, 10, 10);
-    scene.add(light);
+      const renderer = new THREE.WebGLRenderer({ antialias: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
 
-    const ballGeometry = new THREE.SphereGeometry(1, 32, 32);
-    const ballMaterial = new THREE.MeshStandardMaterial({ color: 0x0077ff });
-    const ball = new THREE.Mesh(ballGeometry, ballMaterial);
-    scene.add(ball);
+      // OrbitControls is added to THREE namespace by the included script
+      const controls = new THREE.OrbitControls(camera, renderer.domElement);
+      controls.enableDamping = true;
 
-    const planeGeometry = new THREE.PlaneGeometry(20, 20);
-    const planeMaterial = new THREE.MeshStandardMaterial({ color: 0x888888 });
-    const plane = new THREE.Mesh(planeGeometry, planeMaterial);
-    plane.rotation.x = -Math.PI / 2;
-    scene.add(plane);
+      const light = new THREE.PointLight(0xffffff, 1, 100);
+      light.position.set(10, 10, 10);
+      scene.add(light);
 
-    camera.position.z = 10;
-    camera.position.y = 5;
-    camera.lookAt(0, 0, 0);
+      const ballGeometry = new THREE.SphereGeometry(1, 32, 32);
+      const ballMaterial = new THREE.MeshStandardMaterial({ color: 0x0077ff });
+      const ball = new THREE.Mesh(ballGeometry, ballMaterial);
+      scene.add(ball);
 
-    let velocity = -0.1;
-    let y = 5;
+      const planeGeometry = new THREE.PlaneGeometry(20, 20);
+      const planeMaterial = new THREE.MeshStandardMaterial({ color: 0x888888 });
+      const ground = new THREE.Mesh(planeGeometry, planeMaterial);
+      ground.rotation.x = -Math.PI / 2;
+      scene.add(ground);
 
-    function animate() {
-      requestAnimationFrame(animate);
-      velocity -= 0.01;
-      y += velocity;
-      if (y <= 1) {
-        y = 1;
-        velocity *= -0.9;
+      camera.position.set(0, 5, 10);
+      camera.lookAt(0, 0, 0);
+
+      const raycaster = new THREE.Raycaster();
+      const mouse = new THREE.Vector2();
+
+      let selected = null;
+      let offset = new THREE.Vector3();
+      const dragPlane = new THREE.Plane(new THREE.Vector3(0, 1, 0), 0);
+      let dragging = false;
+
+      let velocity = -0.1;
+      let y = 5;
+
+      function animate() {
+        requestAnimationFrame(animate);
+
+        if (!dragging) {
+          velocity -= 0.01;
+          y += velocity;
+          if (y <= 1) {
+            y = 1;
+            velocity *= -0.9;
+          }
+          ball.position.y = y;
+        }
+
+        controls.update();
+        renderer.render(scene, camera);
       }
-      ball.position.y = y;
-      renderer.render(scene, camera);
-    }
 
-    animate();
+      animate();
+
+      function getMouseIntersection(event) {
+        mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+        mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+        raycaster.setFromCamera(mouse, camera);
+
+        const intersectPoint = new THREE.Vector3();
+        raycaster.ray.intersectPlane(dragPlane, intersectPoint);
+        return intersectPoint;
+      }
+
+      window.addEventListener('mousedown', (event) => {
+        mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+        mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+        raycaster.setFromCamera(mouse, camera);
+        const intersects = raycaster.intersectObject(ball);
+        if (intersects.length > 0) {
+          selected = intersects[0].object;
+          offset.copy(intersects[0].point).sub(selected.position);
+          dragging = true;
+          controls.enabled = false;
+        }
+      });
+
+      window.addEventListener('mouseup', () => {
+        if (dragging) {
+          dragging = false;
+          selected = null;
+          velocity = 0;
+          controls.enabled = true;
+        }
+      });
+
+      window.addEventListener('mousemove', (event) => {
+        if (!dragging || !selected) return;
+        const intersectPoint = getMouseIntersection(event);
+        if (intersectPoint) {
+          selected.position.copy(intersectPoint.sub(offset));
+          y = selected.position.y;
+        }
+      });
+
+      window.addEventListener('resize', () => {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      });
+    }
   </script>
 </body>
 </html>
-
